Use indexed access for Laplace lists